--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: Krupali
+last: Sheth
+watiam: 20811041
+student: 20811041
+email: k2sheth@uwaterloo.ca
 ...
