--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
 first: Krupali
 last: Sheth
-watiam: 20811041
+watiam: k2sheth
 student: 20811041
 email: k2sheth@uwaterloo.ca
 ...
